Fix grid overflow

--- a/src/components/color-picker/color-picker.scss
+++ b/src/components/color-picker/color-picker.scss
@@ -226,6 +226,10 @@
 // Color dropdown
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+.color-dropdown::part(panel) {
+  overflow: visible;
+}
+
 .color-dropdown__trigger {
   display: inline-block;
   position: relative;
